--- a/css/screen.css
+++ b/css/screen.css
@@ -95,6 +95,7 @@
   --color-neutral-xxx-dark: #3b3b53;
 
   /* Shadows */
+  --global-box-shadow: 0px 2px 6px rgba(255,255,255,0.4);
 
   /* border radius */
 
@@ -388,19 +389,29 @@ input::placeholder {
 .c-app {
     background-color: var(--color-neutral-xx-light);
     min-height: 100vh;
-    gr
+    display: grid;
+    grid-template-columns: repeat(4, 260px);
+  grid-template-rows: 70px ;
 }
 .c-app__logo {
   background-color: var(--color-neutral-xxx-dark);
+  width: 260px;
+  grid-column: 1/ span 1;
 }
 .c-app__topbar {
     background-color: var(--color-white);
+    grid-column: 2 / span 4;
+    z-index: 1;
+    box-shadow: var(--global-box-shadow) ;
 }
 .c-app__sidebar {
     background-color: var(--color-neutral-xx-dark);
+    width: 260px;
+    grid-column: 1 / span 1;
 }
 .c-app__main {
     background-color: var(--color-neutral-xx-light);
+    grid-column: 2 / span 4;
 }
 
 /*------------------------------------*\
