--- a/css/screen.css
+++ b/css/screen.css
@@ -1,76 +1,6 @@
 /*------------------------------------*\
 #FONTS
 \*------------------------------------*/
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 'black';
-  src: url('../fonts/SourceSansPro-Black.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 800;
-  src: url('../fonts/SourceSansPro-Black.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 700;
-  src: url('../fonts/SourceSansPro-Bold.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 700;
-  src: url('../fonts/SourceSansPro-BoldItalic.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 600;
-  src: url('../fonts/SourceSansPro-SemiBold.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 600;
-  src: url('../fonts/SourceSansPro-SemiBoldItalic.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 'normal';
-  src: url('../fonts/SourceSansPro-Regular.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 400;
-  src: url('../fonts/SourceSansPro-Italic.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 300;
-  src: url('../fonts/SourceSansPro-Light.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 300;
-  src: url('../fonts/SourceSansPro-LightItalic.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 200;
-  src: url('../fonts/SourceSansPro-ExtraLight.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-weight: 200;
-  src: url('../fonts/SourceSansPro-ExtraLightItalic.ttf') format('ttf');
-}
 
 /*------------------------------------*\
 #Variables
@@ -78,60 +8,60 @@
 
 :root {
   /* colors */
-  --color-beta: MEDIUMSLATEBLUE;
+  --color-alpha-light: MEDIUMSLATEBLUE;
+  --color-alpha: SLATEBLUE;
 
-  --color-alpha: #a3a0fb;
+  --color-neutral-light: LIGHTSLATEGRAY;
+  --color-neutral: SLATEGRAY;
+  --color-neutral-dark: DARKSLATEGRAY;
 
-  --color-white:#fff;
+  --global-color-neutral-xxxx-light: #f0f0f7;
+  --global-color-neutral-xxx-light: #ebebf2;
+  --global-color-neutral-xx-light: #d7dae2;
+  --global-color-neutral-x-light: #bcbccb;
+  --global-color-neutral-light: #a5a4bf;
+  --global-color-neutral-dark: #808495;
+  --global-color-neutral-x-dark: #4d4f5c;
+  --global-color-neutral-xx-dark: #43425d;
+  --global-color-neutral-xxx-dark: #3b3b53;
 
-  --color-neutral-xxxx-light: #f0f0f7;
-  --color-neutral-xxx-light: #ebebf2;
-  --color-neutral-xx-light: #d7dae2;
-  --color-neutral-x-light: #bcbccb;
-  --color-neutral: #a5a4bf;
-  --color-neutral-dark: #808495;
-  --color-neutral-x-dark: #4d4f5c;
-  --color-neutral-xx-dark: #43425d;
-  --color-neutral-xxx-dark: #3b3b53;
+  --global-color-white: #ffffff;
 
+  --global-color-alpha: #a3a0fb;
+  --global-color-beta: #3b86ff;
+  --global-color-gamma: #54d8ff;
+  --global-color-epsilon: #ff6565;
+  --global-color-delta: #3cc480;
+
+  --global-whitespace: 5px;
+  --global-whitespace-lg: 30px;
   /* Shadows */
-  --global-box-shadow: 0px 2px 6px rgba(255,255,255,0.4);
 
   /* border radius */
 
   /* transitions */
   --transition-alpha: 0.1s;
-
-  /* whitepace */
-
-  --global-baseline: 5px;
-  --global-whitespase-xxs: var(--global-baseline); /* = 5px*/
-  --global-whitespase-xs: calc(var(--global-baseline) * 2); /* = 10px*/
-  --global-whitespase-sm: calc(var(--global-baseline) * 3); /* = 15px*/
-  --global-whitespase-md: calc(var(--global-baseline) * 4); /* = 20px*/
-  --global-whitespase-lg: calc(var(--global-baseline) * 5); /* = 25px*/
-  --global-whitespase-sm: calc(var(--global-baseline) * 6); /* = 30px*/
 }
 
 /*------------------------------------*\
-#GENERIC
-\*------------------------------------*/
+  #GENERIC
+  \*------------------------------------*/
 
 /*
-    Generic: Page
-    ---
-    Global page styles + universal box-sizing:
-*/
+      Generic: Page
+      ---
+      Global page styles + universal box-sizing:
+  */
 
 html {
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.5;
-  font-family: 'Source Sans Pro', arial, sans-serif;
-  color: var(--color-neutral-xx-dark);
+  font-family: 'source-sans-pro', arial, sans-serif;
+  color: var(--color-neutral-dark);
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--color-neutral-xxxx-light);
+  background-color: var(--global-color-neutral-xxxx-light);
 }
 
 *,
@@ -141,11 +71,11 @@ html {
 }
 
 /*
-* Remove text-shadow in selection highlight:
-* https://twitter.com/miketaylr/status/12228805301
-*
-* Customize the background color to match your design.
-*/
+  * Remove text-shadow in selection highlight:
+  * https://twitter.com/miketaylr/status/12228805301
+  *
+  * Customize the background color to match your design.
+  */
 
 ::-moz-selection {
   background: var(--color-alpha);
@@ -160,14 +90,14 @@ html {
 }
 
 /*------------------------------------*\
-#Elements
-\*------------------------------------*/
+  #Elements
+  \*------------------------------------*/
 
 /*
-Elements: Images
----
-Default markup for images to make them responsive
-*/
+  Elements: Images
+  ---
+  Default markup for images to make them responsive
+  */
 
 img {
   max-width: 100%;
@@ -175,10 +105,10 @@ img {
 }
 
 /*
-    Elements: typography
-    ---
-    Default markup for typographic elements
-*/
+      Elements: typography
+      ---
+      Default markup for typographic elements
+  */
 
 h1,
 h2,
@@ -188,21 +118,21 @@ h3 {
 
 h1 {
   font-size: 36px;
-  line-height: calc(var(--global-baseline) * 10);
-  margin: 0 0 var(--global-whitespase-md);
+  line-height: 48px;
+  margin: 0 0 24px;
 }
 
 h2 {
-  font-size: 28px;
-  font-weight: normal;
-  line-height: calc(var(--global-baseline) * 8);
-  margin: 0 0 var(--global-whitespase-lg);
+  font-size: 32px;
+  line-height: 40px;
+  margin: 0 0 24px;
 }
 
 h3 {
-  font-size: 26px;
-  line-height: calc(var(--global-baseline) * 6);
-  margin: 0 0 var(--global-whitespase-md);
+  font-size: 28px;
+  line-height: 32px;
+  margin: 0 0 24px;
+  font-weight: 400;
 }
 
 h4,
@@ -210,8 +140,8 @@ h5,
 h6 {
   font-size: 16px;
   font-weight: 600;
-  line-height: calc(var(--global-baseline) * 5);
-  margin: 0 0 var(--global-whitespase-md);
+  line-height: 24px;
+  margin: 0 0 24px;
 }
 
 p,
@@ -221,17 +151,27 @@ dl,
 table,
 address,
 figure {
-  margin: 0 0 var(--global-whitespase-md);
+  margin: 0 0 24px;
 }
 
 ul,
 ol {
-  padding-left: 24px;
+  padding-left: 0px;
 }
 
 li ul,
 li ol {
   margin-bottom: 0;
+}
+li {
+  list-style-type: none;
+}
+
+li a {
+  margin: 0px;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 blockquote {
@@ -252,6 +192,12 @@ figcaption {
   line-height: 16px;
   margin-top: 8px;
 }
+.c-app__topbar h3 {
+  color: var(--global-color-neutral-xxx-dark);
+  display: block;
+  text-align: center;
+  margin: 20px 0 20px 0;
+}
 
 hr {
   border: 0;
@@ -259,23 +205,41 @@ hr {
   background: LightGrey;
   margin: 0 0 24px;
 }
+.c-app__main a h3 {
+  color: var(--global-color-neutral-x-dark);
+}
 
-a {
+.c-app__sidebar a {
   transition: all var(--transition-alpha);
-  color: var(--color-alpha);
+  color: var(--global-color-white);
   outline-color: var(--color-alpha);
   outline-width: medium;
   outline-offset: 2px;
+  padding-left: 24px;
+}
+svg:link {
+  text-decoration: none;
+}
+.c-dashboard__item p {
 }
 
-a:visited,
-a:active {
-  color: var(--color-alpha);
+.c-app__sidebar a:visited svg,
+.c-app__sidebar a:active svg {
+  fill: var(--global-color-neutral-light);
 }
 
-a:hover,
-a:focus {
-  color: var(--color-alpha-light);
+.c-app__sidebar a:hover svg,
+.c-app__sidebar a:hover svg {
+  fill: var(--color-alpha-light);
+}
+.c-app__sidebar a:link {
+  text-decoration: none;
+}
+
+.c-app__sidebar li:hover {
+  box-shadow: -5px 0px var(--global-color-alpha);
+  transform: translateX(5px);
+  transition: all 0.2s;
 }
 
 label,
@@ -292,14 +256,14 @@ input::placeholder {
 }
 
 /*------------------------------------*\
-#OBJECTS
-\*------------------------------------*/
+  #OBJECTS
+  \*------------------------------------*/
 
 /*
-    Objects: Row
-    ---
-    Creates a horizontal row that stretches the viewport and adds padding around children
-*/
+      Objects: Row
+      ---
+      Creates a horizontal row that stretches the viewport and adds padding around children
+  */
 
 .o-row {
   position: relative;
@@ -307,10 +271,10 @@ input::placeholder {
 }
 
 /*
-    Objects: Container
-    ---
-    Creates a horizontal container that sets de global max-width
-*/
+      Objects: Container
+      ---
+      Creates a horizontal container that sets de global max-width
+  */
 
 .o-container {
   margin-left: auto;
@@ -320,10 +284,10 @@ input::placeholder {
 }
 
 /*
-    Objects: List
-    ---
-    Small reusable object to remove default list styling from lists
-*/
+      Objects: List
+      ---
+      Small reusable object to remove default list styling from lists
+  */
 
 .o-list {
   list-style: none;
@@ -331,10 +295,10 @@ input::placeholder {
 }
 
 /*
-    Object: Button reset
-    ---
-    Small button reset object
-*/
+      Object: Button reset
+      ---
+      Small button reset object
+  */
 
 .o-button-reset {
   border: none;
@@ -360,10 +324,10 @@ input::placeholder {
 }
 
 /*
-    Object: Hide accessible
-    ---
-    Accessibly hide any element
-*/
+      Object: Hide accessible
+      ---
+      Accessibly hide any element
+  */
 
 .o-hide-accessible {
   position: absolute;
@@ -377,56 +341,113 @@ input::placeholder {
 }
 
 /*------------------------------------*\
-#COMPONENTS
-\*------------------------------------*/
+  #COMPONENTS
+  \*------------------------------------*/
 
-/*
-    Component: Logo
-    ---
-    Website main logo
-    
-*/
 .c-app {
-    background-color: var(--color-neutral-xx-light);
-    min-height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(4, 260px);
-  grid-template-rows: 70px ;
+  min-height: 100vh;
+}
+
+.c-app__topbar {
+  background-color: #fff;
+  box-shadow: 0px 3px rgba(0, 0, 0, 0.05);
+  z-index: 3;
 }
 .c-app__logo {
-  background-color: var(--color-neutral-xxx-dark);
-  width: 260px;
-  grid-column: 1/ span 1;
-  color: var(--color-white) ;
-  font-weight: 700;
-  
-  
-}
-.c-app__topbar {
-    background-color: var(--color-white);
-    grid-column: 2 / span 4;
-    z-index: 1;
-    box-shadow: var(--global-box-shadow) ;
-}
-.c-app__sidebar {
-    background-color: var(--color-neutral-xx-dark);
-    width: 260px;
-    grid-column: 1 / span 1;
-}
-.c-app__main {
-    background-color: var(--color-neutral-xx-light);
-    grid-column: 2 / span 4;
+  background-color: var(--global-color-neutral-xx-dark);
+  box-shadow: 0px 3px rgba(0, 0, 0, 0.05);
+  z-index: 3;
 }
 
-/*------------------------------------*\
-#UTILITIES
-\*------------------------------------*/
+.c-app__sidebar {
+  background-color: var(--global-color-neutral-xx-dark);
+}
+@media (min-width: 992px) {
+  .c-app {
+    display: grid;
+    grid-template-columns: 260px 1fr;
+    grid-template-rows: auto 1fr;
+  }
+}
+.c-logo {
+  font-size: 15px;
+  color: var(--global-color-white);
+  line-height: 21px;
+  letter-spacing: 2px;
+  margin: 0px;
+  padding: 25px 20px 25px 20px;
+}
+.c-main-nav__link {
+  height: 16px;
+  width: 16px;
+
+  fill: var(--color-neutral-light);
+  margin-right: 11px;
+  margin-bottom: 22px;
+  margin-top: 22px;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.c-app__main {
+  overflow-y: auto;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+.c-app__sidebar ul {
+  overflow-y: auto;
+}
+body {
+  overflow: hidden;
+}
+
+.c-dashboard {
+  display: grid;
+  grid-gap: var(--global-whitespace-lg);
+  margin-bottom: var(--global-whitespace);
+}
+.c-dashboard__item {
+  display: grid;
+  background-color: var(--global-color-white);
+}
+@media screen and (min-width: 992px) {
+  .c-dashboard {
+    grid-template-columns: repeat(12, 1fr);
+  }
+  .c-dashboard__item {
+    grid-column: 1/-1;
+  }
+}
+.c-card{
+
+}
+
+.c-card__header{
+
+}
+
+.c-card__body{
+
+}
+
+.c-card__title
 
 /*
-    Utilities: color
-    ---
-    Utility classes to put specific colors onto elements
-*/
+      Component: Logo
+      ---
+      Website main logo
+  */
+
+/*------------------------------------*\
+  #UTILITIES
+  \*------------------------------------*/
+
+/*
+      Utilities: color
+      ---
+      Utility classes to put specific colors onto elements
+  */
 
 .u-color-neutral {
   color: var(--color-neutral);
@@ -437,10 +458,10 @@ input::placeholder {
 }
 
 /*
-    Utilities: spacing
-    ---
-    Utility classes to put specific margins and paddings onto elements
-*/
+      Utilities: spacing
+      ---
+      Utility classes to put specific margins and paddings onto elements
+  */
 
 .u-pt-clear {
   padding-top: 0 !important;
@@ -471,10 +492,10 @@ input::placeholder {
 }
 
 /*
-    Utilities: max-width
-    ---
-    Utility classes to put specific max widths onto elements
-*/
+      Utilities: max-width
+      ---
+      Utility classes to put specific max widths onto elements
+  */
 
 .u-max-width-xs {
   max-width: 27em !important;
@@ -497,10 +518,10 @@ input::placeholder {
 }
 
 /*
-    Utilities: align
-    ---
-    Utility classes align text or components
-*/
+      Utilities: align
+      ---
+      Utility classes align text or components
+  */
 
 .u-align-text-center {
   text-align: center;
@@ -511,52 +532,133 @@ input::placeholder {
 }
 
 /*
-    Utilities: text
-    Utility classes to create smaller or bigger test
-*/
+      Utilities: text
+      Utility classes to create smaller or bigger test
+  */
 
 .u-text-sm {
   font-size: 14px;
 }
 
+/*
+utility:grid
+
+*/
+
+@media (min-width: 992px) {
+  .u-x-span-1-bp3 {
+    grid-column: span 1;
+  }
+  .u-x-span-2-bp3 {
+    grid-column: span 2;
+  }
+  .u-x-span-3-bp3 {
+    grid-column: span 3;
+  }
+  .u-x-span-4-bp3 {
+    grid-column: span 4;
+  }
+  .u-x-span-5-bp3 {
+    grid-column: span 5;
+  }
+  .u-x-span-6-bp3 {
+    grid-column: span 6;
+  }
+  .u-x-span-7-bp3 {
+    grid-column: span 7;
+  }
+  .u-x-span-8-bp3 {
+    grid-column: span 8;
+  }
+  .u-x-span-9-bp3 {
+    grid-column: span 9;
+  }
+  .u-x-span-10-bp3 {
+    grid-column: span 10;
+  }
+  .u-x-span-11-bp3 {
+    grid-column: span 11;
+  }
+  .u-x-span-12-bp3 {
+    grid-column: span 12;
+  }
+
+  .u-y-span-1-bp3 {
+    grid-row: span 1;
+  }
+  .u-y-span-2-bp3 {
+    grid-row: span 2;
+  }
+  .u-y-span-3-bp3 {
+    grid-row: span 3;
+  }
+  .u-y-span-4-bp3 {
+    grid-row: span 4;
+  }
+  .u-y-span-5-bp3 {
+    grid-row: span 5;
+  }
+  .u-y-span-6-bp3 {
+    grid-row: span 6;
+  }
+
+  .u-y-span-7-bp3 {
+    grid-row: span 7;
+  }
+  .u-y-span-8-bp3 {
+    grid-row: span 8;
+  }
+  .u-y-span-9-bp3 {
+    grid-row: span 9;
+  }
+  .u-y-span-10-bp3 {
+    grid-row: span 10;
+  }
+  .u-y-span-11-bp3 {
+    grid-row: span 11;
+  }
+  .u-y-span-12-bp3 {
+    grid-row: span 12;
+  }
+}
 /*------------------------------------*\
-#MEDIA
-\*------------------------------------*/
+  #MEDIA
+  \*------------------------------------*/
 
 /*
-    Media Queries
-    ---
-    EXAMPLE Media Queries for Responsive Design.
-    These examples override the primary ('mobile first') styles.
-    USE THEM INLINE!
-*/
+      Media Queries
+      ---
+      EXAMPLE Media Queries for Responsive Design.
+      These examples override the primary ('mobile first') styles.
+      USE THEM INLINE!
+  */
 
 /* Extra small devices (portrait phones, less than 576px)
-No media query since this is the default in mobile first design
-*/
+  No media query since this is the default in mobile first design
+  */
 
 /* Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {}
-*/
+  @media (min-width: 576px) {}
+  */
 
 /* Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {}
-*/
+  @media (min-width: 768px) {}
+  */
 
 /* Large devices (landscape tablets, desktops, 992px and up)
-@media (min-width: 992px) {}
-*/
+  @media (min-width: 992px) {}
+  */
 
 /* Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {}
-*/
+  @media (min-width: 1200px) {}
+  */
 
 /*
-    Print styles.
-    ---
-    Inlined to avoid the additional HTTP request:
-    http://www.phpied.com/delay-loading-your-print-css/
-*/
+      Print styles.
+      ---
+      Inlined to avoid the additional HTTP request:
+      http://www.phpied.com/delay-loading-your-print-css/
+  */
 
 @media print {
   *,
@@ -565,7 +667,7 @@ No media query since this is the default in mobile first design
     background: transparent !important;
     color: #000 !important;
     /* Black prints faster:
-        http://www.sanbeiji.com/archives/953 */
+          http://www.sanbeiji.com/archives/953 */
     box-shadow: none !important;
     text-shadow: none !important;
   }
@@ -580,9 +682,9 @@ No media query since this is the default in mobile first design
     content: ' (' attr(title) ')';
   }
   /*
-    * Don't show links that are fragment identifiers,
-    * or use the `javascript:` pseudo protocol
-    */
+      * Don't show links that are fragment identifiers,
+      * or use the `javascript:` pseudo protocol
+      */
   a[href^='#']:after,
   a[href^='javascript:']:after {
     content: '';
@@ -596,9 +698,9 @@ No media query since this is the default in mobile first design
     page-break-inside: avoid;
   }
   /*
-    * Printing Tables:
-    * http://css-discuss.incutio.com/wiki/Printing_Tables
-    */
+      * Printing Tables:
+      * http://css-discuss.incutio.com/wiki/Printing_Tables
+      */
   thead {
     display: table-header-group;
   }
